--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
         "psr-4": {
             "Elevator\\": ""
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8"
     }
 }
